// tag::header[]
[%autowidth.stretch]
|===
| *Date* | *Solution Area* | *Description of change*
// end::header[]
// tag::hmc[]
| 01/24/2023 | Hybrid Cloud | Added TR: Disaster Recovery with FSx for ONTAP and VMC (AWS VMware Cloud)
// end::hmc[]
// tag::ent-db[]
| 01/12/2023 | Database | Added blog: Protect your SQL Server workloads using NetApp SnapCenter with Amazon FSx for NetApp ONTAP
| 12/15/2022 | Database | Added TR-4923: SQL Server on AWS EC2 using Amazon FSx for NetApp ONTAP
| 12/06/2022 | Database | Added 7 videos for Oracle database modernization in hybrid cloud with Amazon FSx storage
// end::ent-db[]
// tag::hmc[]
| 10/25/2022 | Hybrid Cloud | Added link to VMware docuemntation for FSx ONTAP as an NFS datastore
| 10/25/2022 | Hybrid Cloud | Added reference to blog for Configuring Hybrid Cloud with FSx ONTAP and VMC on AWS SDDC using VMware HCX
| 09/30/2022 | Hybrid Cloud | Added solution for Migrating Workloads to FSxN datastore using VMware HCX
| 09/29/2022 | Hybrid Cloud | Added solution for Migrating Workloads to ANF datastore using VMware HCX
| 09/14/2022 | Hybrid Cloud | Added links to TCO calculators and simulators for FSxN / VMC and ANF / AVS
| 09/14/2022 | Hybrid Cloud | Added supplemental NFS datastore option for AWS / VMC
// end::hmc[]
// tag::ent-db[]
| 08/25/2022 | Database | Added blog - Modernize your Oracle database operation in hybrid cloud with Amazon FSx storage
// end::ent-db[]
// tag::aiml[]
| 08/25/2022 | AI | New solution: NVIDIA AI Enterprise with NetApp and VMware
// end::aiml[]
// tag::hmc[]
| 08/23/2022 | Hybrid Cloud | Updated the latest region availability for all supplemental NFS datastore options
// end::hmc[]
// tag::vmware[]
| 08/05/2022 | Virtualization | Added "Reboot Required" information for recommended ESXi and ONTAP settings
// end::vmware[]
// tag::hmc[]
| 07/28/2022 | Hybrid Cloud | Added DR solution with SnapCenter and Veeam for AWS/VMC (guest connected storage)
// end::hmc[]
// tag::hmc[]