@@ -41,6 +41,8 @@ Overview of the blogs highlighting specific features of the many of the NetApp s
 * link:https://cloud.netapp.com/blog/azure-blg-netapp-cloud-offerings-with-azure-vmware-solution[Get started with Azure VMware Solution using NetApp-based cloud offerings]
 
 * link:https://cloud.netapp.com/blog/aws-fsxo-blg-configure-hybrid-cloud-with-fsx-for-netapp-ontap-and-vmware-cloud-on-aws-sddc-using-vmware-hcx[Configure Hybrid Cloud with FSx for NetApp ONTAP and VMware Cloud on AWS SDDC using VMware HCX]
+
+* link:https://www.netapp.com/blog/cloud-volumes-service-google-cloud-vmware-engine/[NetApp Cloud Volumes Service datastore support for Google Cloud VMware Engine]
 --
 .Virtualization
 --
