@@ -84,4 +84,6 @@ indexpage:
           url: https://cloud.netapp.com/anf-avs/roi?hs_preview=fXzZRiOb-88710048938
         - title: "ANF + AVS Simulator"
           url: https://netapp-automation.github.io/ANF-AVS-Simulator
+        - title: "GCVE + CVS TCO Estimator"
+          url: https://bluexp.netapp.com/gcve-cvs/roi
 #
