@@ -26,6 +26,11 @@ indexpage:
 #        - title: "Workload Migrate Solutions"
 #          url:
 #
+    - title: "Tools"
+      links:
+        - title: "GCVE + CVS TCO Estimator"
+          url: https://bluexp.netapp.com/gcve-cvs/roi
+#
     - title: "Additional Information"
       links:
 #        - title: "Region Support for NFS Datastores"
