@@ -4,7 +4,8 @@
 | *Date* | *Solution Area* | *Description of change*
 // end::header[]
 // tag::hmc[]
-| 01/24/2023 | Hybrid Cloud | Added TR: Disaster Recovery with FSx for ONTAP and VMC (AWS VMware Cloud)
+| 02/07/2023 | Hybrid Cloud | Added blog: Announcing general availability of NetApp Cloud Volumes Service datastore support for Google Cloud VMware Engine
+| 02/07/2023 | Hybrid Cloud | Added TR-4955: Disaster Recovery with FSx for ONTAP and VMC (AWS VMware Cloud)
 // end::hmc[]
 // tag::ent-db[]
 | 01/12/2023 | Database | Added blog: Protect your SQL Server workloads using NetApp SnapCenter with Amazon FSx for NetApp ONTAP
